--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Hub | PDF.js View</title>
+    <title>Study Hub | Premium PDF Viewer</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -21,7 +21,6 @@
             justify-content: center; border: 1px solid #00f2ff; transition: 0.3s; backdrop-filter: blur(5px);
         }
         .action-btn:hover { background: rgba(0, 242, 255, 0.2); box-shadow: 0 0 15px #00f2ff; }
-        .action-btn:hover i.fa-rotate-right { transform: rotate(180deg); }
 
         #admin-panel { display: none; background: #2ecc71; color: white; padding: 10px; text-align: center; position: sticky; top: 0; z-index: 1000; font-weight: bold;}
         .owner-btn { background: #00f2ff; color: #000; border: none; padding: 8px 15px; border-radius: 50px; font-weight: bold; cursor: pointer; margin: 5px; font-size: 0.8rem; }
@@ -42,11 +41,11 @@
         .notes-section { display: none; padding: 20px; max-width: 900px; margin: 20px auto; background: rgba(0,0,0,0.85); border-radius: 20px; border: 1px solid #00f2ff; }
         .unit-item { background: rgba(255,255,255,0.05); margin: 8px 0; padding: 12px; border-radius: 10px; display: flex; justify-content: space-between; align-items: center; cursor: pointer; transition: 0.2s; }
         .unit-item:hover { background: rgba(255,255,255,0.1); }
-        .unit-item.active-unit { background: rgba(0, 242, 255, 0.1); border: 1px solid #00f2ff; }
 
-        #viewer-box { display: none; margin-top: 20px; border-radius: 12px; border: 1px solid #00f2ff; background: #333; overflow: hidden; }
-        .viewer-header { background: #111; padding: 10px; display: flex; justify-content: space-between; align-items: center; }
-        #pdf-iframe { width: 100%; height: 650px; border: none; background: #525659; }
+        /* Full Screen PDF Lightbox */
+        #pdf-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 3000; flex-direction: column; }
+        .viewer-controls { background: #111; padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #333; }
+        #pdf-frame { flex-grow: 1; border: none; width: 100%; height: 100%; background: #222; }
 
         .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 1500; }
         .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #111; padding: 25px; border-radius: 15px; border: 1px solid #00f2ff; z-index: 2000; text-align: center; width: 320px; }
@@ -58,13 +57,20 @@
 
 <div id="stars-container"></div>
 
+<div id="pdf-overlay">
+    <div class="viewer-controls">
+        <span id="viewer-title" style="color: #00f2ff; font-weight: 600; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; max-width: 50%;">Loading...</span>
+        <div style="display:flex; gap: 8px;">
+            <button id="main-dl" class="owner-btn" style="background:#2ecc71;">Download</button>
+            <button class="owner-btn" style="background:#ff5252; color:#fff;" onclick="closeViewer()">Close</button>
+        </div>
+    </div>
+    <iframe id="pdf-frame" src=""></iframe>
+</div>
+
 <div class="top-actions">
-    <div class="action-btn" onclick="location.reload()" title="Refresh Page">
-        <i class="fa-solid fa-rotate-right"></i>
-    </div>
-    <div class="action-btn" onclick="openAbout()" title="About Developers">
-        <i class="fa-solid fa-info"></i>
-    </div>
+    <div class="action-btn" onclick="location.reload()" title="Refresh Page"><i class="fa-solid fa-rotate-right"></i></div>
+    <div class="action-btn" onclick="openAbout()" title="About Developers"><i class="fa-solid fa-info"></i></div>
 </div>
 
 <div id="admin-panel">
@@ -91,27 +97,16 @@
     <div id="admin-unit-tools" style="display:none; margin-top:20px; border-top:1px solid #333; padding-top:15px;">
         <button class="owner-btn" onclick="addUnit()">+ Add Unit</button>
         <div id="url-input-area" style="display:none; margin-top:10px;">
-            <input type="text" id="unitUrl" placeholder="Paste Link (Drive/Web)" style="width:100%; padding:10px; border-radius:8px; border:1px solid #00f2ff; background:#000; color:#fff;">
+            <input type="text" id="unitUrl" placeholder="Paste Google Drive Link" style="width:100%; padding:10px; border-radius:8px; border:1px solid #00f2ff; background:#000; color:#fff;">
             <button class="owner-btn" onclick="saveUrl()" style="width:100%; margin-top:10px;">Save Link</button>
         </div>
-    </div>
-
-    <div id="viewer-box">
-        <div class="viewer-header">
-            <span id="viewing-name" style="font-size:0.8rem; color:#00f2ff;"></span>
-            <div>
-                <button class="owner-btn" style="padding:4px 10px;" onclick="goFull()">Full Screen</button>
-                <button id="dlLink" class="owner-btn" style="padding:4px 10px; background:#2ecc71;">Download</button>
-            </div>
-        </div>
-        <iframe id="pdf-iframe" src=""></iframe>
     </div>
 </div>
 
 <div class="overlay" id="overlay" onclick="closeAll()"></div>
 <div class="modal" id="infoModal">
     <h2 id="popHead" onclick="hClick()">STUDY HUB</h2>
-    <p style="margin-top:10px;">Education is the key to unlock the golden door of freedom.</p>
+    <p style="margin-top:10px;">Empowering Students.</p>
 </div>
 <div class="modal" id="aboutModal">
     <h2>Developers</h2>
@@ -131,8 +126,7 @@
         projectId: "studyhub-33164",
         storageBucket: "studyhub-33164.firebasestorage.app",
         messagingSenderId: "918352715015",
-        appId: "1:918352715015:web:ab2ba28aa9456aba32b9a2",
-        measurementId: "G-HDPLBSL0BN"
+        appId: "1:918352715015:web:ab2ba28aa9456aba32b9a2"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -159,56 +153,28 @@
     };
 
     onSnapshot(docRef, (s) => {
-        if(s.exists()) {
-            subjectData = s.data();
-        } else {
-            subjectData = {};
-        }
+        if(s.exists()) subjectData = s.data();
         renderSubjects();
         if(currentKey) renderUnits();
     });
 
-    const updateCloud = async () => {
-        try {
-            await setDoc(docRef, subjectData);
-        } catch(e) {
-            alert("Error: " + e.message + "\nMake sure Firestore rules are set to public.");
-        }
-    };
+    const updateCloud = async () => { try { await setDoc(docRef, subjectData); } catch(e) { alert("Cloud Sync Failed."); } };
 
     window.renderSubjects = () => {
         const grid = document.getElementById('mainGrid');
         grid.innerHTML = '';
-        const keys = Object.keys(subjectData);
-        
-        if(keys.length === 0) {
-            grid.innerHTML = '<p style="grid-column: 1/-1; opacity:0.5; text-align:center;">Empty Hub. Login as Admin to begin.</p>';
-            return;
-        }
-
-        const sortedKeys = keys.sort((a, b) => (subjectData[a].pos || 999) - (subjectData[b].pos || 999));
-
-        sortedKeys.forEach(k => {
+        const keys = Object.keys(subjectData).sort((a, b) => (subjectData[a].pos || 999) - (subjectData[b].pos || 999));
+        keys.forEach(k => {
             grid.innerHTML += `
                 <div class="card" onclick="openSubject('${k}')">
                     <div class="admin-card-tools" style="${isAdmin ? 'display:flex' : ''}">
-                        <i class="fa-solid fa-up-down" title="Set Position" style="color:#f1c40f;" onclick="event.stopPropagation(); setPosition('${k}')"></i>
-                        <i class="fa-solid fa-pen" title="Rename" style="color:#00f2ff;" onclick="event.stopPropagation(); editSubject('${k}')"></i>
-                        <i class="fa-solid fa-trash" title="Delete" style="color:#ff5252;" onclick="event.stopPropagation(); deleteSubject('${k}')"></i>
+                        <i class="fa-solid fa-up-down" onclick="event.stopPropagation(); setPosition('${k}')"></i>
+                        <i class="fa-solid fa-trash" onclick="event.stopPropagation(); deleteSubject('${k}')"></i>
                     </div>
                     <i class="fa-solid fa-graduation-cap"></i>
                     <h3>${subjectData[k].title}</h3>
-                    ${isAdmin ? `<small style="color:#aaa;">Pos: ${subjectData[k].pos || 'N/A'}</small>` : ''}
                 </div>`;
         });
-    };
-
-    window.setPosition = async (k) => {
-        let newPos = prompt("Order number:", subjectData[k].pos || "");
-        if(newPos !== null) {
-            subjectData[k].pos = parseInt(newPos);
-            await updateCloud();
-        }
     };
 
     window.openSubject = (k) => {
@@ -217,7 +183,6 @@
         document.getElementById('notesArea').style.display = 'block';
         document.getElementById('noteTitle').innerText = subjectData[k].title;
         document.getElementById('admin-unit-tools').style.display = isAdmin ? 'block' : 'none';
-        document.getElementById('viewer-box').style.display = 'none';
         renderUnits();
     };
 
@@ -227,43 +192,58 @@
         const units = subjectData[currentKey].units || [];
         units.forEach((u, i) => {
             list.innerHTML += `
-                <div class="unit-item ${selectedIdx === i ? 'active-unit' : ''}" onclick="viewNote(${i})">
+                <div class="unit-item" onclick="viewNote(${i})">
                     <span>${u}</span>
                     <div>
-                        ${isAdmin ? `
-                            <i class="fa-solid fa-pen-to-square" style="color:#00f2ff; margin-right:15px;" onclick="event.stopPropagation(); editUnit(${i})"></i>
-                            <i class="fa-solid fa-trash" style="color:#ff5252; margin-right:15px;" onclick="event.stopPropagation(); deleteUnit(${i})"></i>
-                        ` : ''}
-                        <i class="fa-solid fa-file-lines"></i>
+                        ${isAdmin ? `<i class="fa-solid fa-trash" style="color:#ff5252; margin-right:15px;" onclick="event.stopPropagation(); deleteUnit(${i})"></i>` : ''}
+                        <i class="fa-solid fa-file-pdf" style="color:#e74c3c;"></i>
                     </div>
                 </div>`;
         });
     };
 
+    // LOGIC: POPUP VIEWER WITH ZOOM SUPPORT
     window.viewNote = (i) => {
         selectedIdx = i;
-        renderUnits();
         let rawUrl = subjectData[currentKey].links[i];
         if(isAdmin) document.getElementById('url-input-area').style.display = 'block';
         
         if(!rawUrl || rawUrl === "#") {
-             document.getElementById('viewer-box').style.display = 'none';
+             if(isAdmin) alert("Admin: Please paste a link below.");
              return;
         }
 
-        let viewerUrl = "";
+        let finalViewerUrl = "";
         if(rawUrl.includes('drive.google.com')) {
-            let fileId = rawUrl.split('/d/')[1].split('/')[0];
-            viewerUrl = `https://docs.google.com/viewer?url=https://drive.google.com/uc?id=${fileId}&embedded=true`;
+            let fileId = rawUrl.includes('/d/') ? rawUrl.split('/d/')[1].split('/')[0] : new URL(rawUrl).searchParams.get('id');
+            let directLink = `https://drive.google.com/uc?export=download&id=${fileId}`;
+            finalViewerUrl = `https://docs.google.com/viewer?url=${encodeURIComponent(directLink)}&embedded=true`;
         } else {
-            viewerUrl = `https://docs.google.com/viewer?url=${encodeURIComponent(rawUrl)}&embedded=true`;
+            finalViewerUrl = `https://docs.google.com/viewer?url=${encodeURIComponent(rawUrl)}&embedded=true`;
         }
 
-        document.getElementById('viewer-box').style.display = 'block';
-        document.getElementById('viewing-name').innerText = subjectData[currentKey].units[i];
-        document.getElementById('pdf-iframe').src = viewerUrl;
-        document.getElementById('dlLink').onclick = () => window.open(rawUrl, '_blank');
-        document.getElementById('viewer-box').scrollIntoView({behavior:'smooth'});
+        document.getElementById('viewer-title').innerText = subjectData[currentKey].units[i];
+        document.getElementById('pdf-frame').src = finalViewerUrl;
+        document.getElementById('pdf-overlay').style.display = 'flex';
+        document.getElementById('main-dl').onclick = () => window.open(rawUrl, '_blank');
+        document.body.style.overflow = 'hidden'; // Stop background scrolling
+    };
+
+    window.closeViewer = () => {
+        document.getElementById('pdf-overlay').style.display = 'none';
+        document.getElementById('pdf-frame').src = "";
+        document.body.style.overflow = 'auto';
+    };
+
+    window.saveUrl = async () => {
+        const val = document.getElementById('unitUrl').value;
+        if(selectedIdx !== null && val) {
+            subjectData[currentKey].links[selectedIdx] = val;
+            await updateCloud();
+            document.getElementById('unitUrl').value = '';
+            alert("Saved! Opening preview...");
+            viewNote(selectedIdx);
+        }
     };
 
     window.addSubject = async () => {
@@ -275,12 +255,7 @@
         }
     };
 
-    window.editSubject = async (k) => {
-        let newTitle = prompt("New Name:", subjectData[k].title);
-        if(newTitle) { subjectData[k].title = newTitle; await updateCloud(); }
-    };
-
-    window.deleteSubject = async (k) => { if(confirm("Delete Subject?")) { delete subjectData[k]; await updateCloud(); } };
+    window.deleteSubject = async (k) => { if(confirm("Delete?")) { delete subjectData[k]; await updateCloud(); } };
 
     window.addUnit = async () => {
         let n = prompt("Unit Name:");
@@ -292,11 +267,6 @@
         }
     };
 
-    window.editUnit = async (i) => {
-        let newName = prompt("New Unit Name:", subjectData[currentKey].units[i]);
-        if(newName) { subjectData[currentKey].units[i] = newName; await updateCloud(); }
-    };
-
     window.deleteUnit = async (i) => {
         if(confirm("Delete Unit?")) {
             subjectData[currentKey].units.splice(i, 1);
@@ -305,22 +275,10 @@
         }
     };
 
-    window.saveUrl = async () => {
-        const val = document.getElementById('unitUrl').value;
-        if(selectedIdx !== null && val) {
-            subjectData[currentKey].links[selectedIdx] = val;
-            await updateCloud();
-            alert("Link Saved!");
-            document.getElementById('unitUrl').value = '';
-            viewNote(selectedIdx);
-        }
-    };
-
     window.openAbout = () => openModal('aboutModal');
     function openModal(id) { document.getElementById('overlay').style.display = 'block'; document.getElementById(id).style.display = 'block'; }
     window.closeAll = () => document.querySelectorAll('.modal, .overlay').forEach(e => e.style.display = 'none');
-    window.hideNotes = () => { currentKey = ''; selectedIdx = null; document.getElementById('mainGrid').style.display = 'grid'; document.getElementById('notesArea').style.display = 'none'; };
-    window.goFull = () => { const f = document.getElementById('pdf-iframe'); if (f.requestFullscreen) f.requestFullscreen(); else if (f.webkitRequestFullscreen) f.webkitRequestFullscreen(); };
+    window.hideNotes = () => { currentKey = ''; document.getElementById('mainGrid').style.display = 'grid'; document.getElementById('notesArea').style.display = 'none'; };
     window.doSearch = () => {
         let q = document.getElementById('mSearch').value.toLowerCase();
         document.querySelectorAll('.card').forEach(c => c.style.display = c.innerText.toLowerCase().includes(q) ? 'block' : 'none');
